5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1596_2895.log
== TEST (2019-04-02 13:08:47) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total q * valor + tr
print(total)
-- ERROR:
File "XXXX", line 4
    total q * valor + tr
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:08:53) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total q * valor + tr
print(total)
-- EXECUTION TIME:
0.132133
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 4
    total q * valor + tr
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:09:11) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total= q * valor + tr
print(total)
-- EXECUTION TIME:
0.142127
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
